panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_struct_completed_in_inner_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot declare variable `incomplete_here` with incomplete type `struct T~2`
   ╭─[panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c:9:14]
   │
 9 │     struct T incomplete_here = {.x = 42};
   │              ───────┬───────  
   │                     ╰───────── declared here
───╯

Error: cannot initialise variable of incomplete type `struct T~2`
   ╭─[panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c:9:32]
   │
 9 │     struct T incomplete_here = {.x = 42};
   │     ────┬─── ───────┬───────   ────┬────  
   │         │           │              ╰────── cannot initialise variable of incomplete type
   │         │           │                     
   │         │           ╰───────────────────── while defining this variable
   │         │                                 
   │         ╰───────────────────────────────── `struct T~2` is incomplete
───╯
